Changes made between Gamera File Releases
=========================================

 - conversion from FLOAT to GREYSCALE/GREY16/RGB now works when
   FLOAT image contains negative values. The range [min,max] is
   now linearly scaled to grey range.

 - runlength_smearing no longer returns empty segments

 - RGBPixel.value now returns V in [0.0,1.0] as documented, not in [0,255]


Version 3.3.0, Mai 02, 2011
----------------------------

 - graph API completely rewritten from scratch (thanks to Christian Brandt)
   Changes from a user's perspective:
    o colorize() for coloring a (planar) graph in linear time
    o new flag CHECK_ON_INSERT
    o is_*_connected now actually tests connectedness
    o is_cyclic now actually tests for cycles
    o has_path() for path existence check between nodes
    o add_edge no longer crashes after edges had been removed
    o now also usable directly from C++ (see documentation)

 - geostructs/colorgraph.* have been removed (now available in graph API)

 - rubber band selection in image display improved

 - image_copy() did not work for 1x1 images

 - new plugin contour_pavlidis (category Analysis/Contour)


Version 3.2.7, Mar 11, 2011
----------------------------

 - _group._part glyphs no longer saved in classifier training data:
   when saved as "Page glyphs", they are still saved, but no longer
   when saved as "Classifier glyphs"

 - interactive view selection with rubber bands now also works
   when rubber band touches the image border

 - toolkits now compile out-of-the box again on Ubuntu

 - the following classifier menu entries now work:
    o "Image/Save glyphs into separate files"
    o "File/Symbol names/Import"

 - new plugin segmentation_error (category "PageSegmentation")

 - ProgressFactory now has optional constructor argument
   "numsteps" for doing the update only in *numsteps* discrete steps
   (used for significantly speeding up loading/saving XML files)
